Fix: Cart Page Image Not Fitting Bug

--- a/src/views/CartPage/CartPage.scss
+++ b/src/views/CartPage/CartPage.scss
@@ -45,7 +45,7 @@
 
           .cart-product-image {
             height: 180px;
-            width: 180px;
+            width: 230px;
             display: flex;
             align-items: center;
             justify-content: center;
